@@ -7,7 +7,7 @@ module Fairy
 
 ##CONF.RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby" 
 
-  CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev" 
+  CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-1.9.1" 
   CONF["gentoo"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
   CONF["giant"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
 
@@ -55,12 +55,15 @@ module Fairy
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 80000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
   CONF.POOLQUEUE_POOL_THRESHOLD = 4000
+
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
+
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
+
 ##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
-CONF.SORTEDQUEUE_THRESHOLD = 100000/2
-#CONF.SORTEDQUEUE_THRESHOLD = 10
+#CONF.SORTEDQUEUE_THRESHOLD = 100000/2
+#CONF.SORTEDQUEUE_THRESHOLD = 1000
 ##CONF.SORTEDQUEUE_SORTBY = proc{|v| v}
 
 
@@ -122,7 +125,7 @@ CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-#CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
